--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     overflow-x: hidden;
     margin: auto;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
   }  
   #wrapper {
     position: relative;
@@ -51,6 +51,7 @@
   }
   footer {
     bottom: 0;
+    position: absolute;
     border-top: solid 2px var(--light);
   }
   header,
@@ -113,7 +114,7 @@
     padding: 0;
   }
   article {
-    max-width: 1250px;
+    max-width: 1200px;
   }
   section {
     width: 600px;
@@ -121,6 +122,7 @@
   article,
   section {
     padding: 10px;
+    margin: auto;
   }
    
 /* Navigation */  
@@ -145,8 +147,8 @@
 .home,
 .thanks,
 .error {
-  position: absolute;
   top: 50%;
+  position: absolute;
   transform: translateY(-50%);
 }
 .home p {
@@ -195,7 +197,7 @@ svg:hover {
   display: inline-block;
 }
 .card-big {
-  width: 1250px;
+  width: 1200px;
 }
 .card ul {
   text-align: center;
@@ -306,8 +308,8 @@ input[type="email"]:valid {
   grid-auto-rows: 200px;
   grid-auto-flow: dense;
   max-width: 1250px;
-  margin: 10px auto;
-  padding: 0 10px;
+  margin: 5px auto;
+  padding: 0 5px;
 }
 .gallery__item {
   align-items: center;
@@ -338,7 +340,10 @@ input[type="email"]:valid {
   article,
   section {
     width: 100%;
-  }   
+  }  
+  #main {
+    padding-bottom: 100px; 
+  } 
   nav li {
     padding: 2px;
   } 
