--- a/style.css
+++ b/style.css
@@ -375,9 +375,9 @@ input[type="email"]:valid {
   section {
     width: 100%;
   }  
-  #main {
+  /* #main {
     padding-bottom: 100px; 
-  } 
+  }  */
   nav li {
     padding: 2px;
   } 
@@ -413,8 +413,8 @@ input[type="email"]:valid {
   }
 }
 @media all and (orientation: landscape) and (max-height: 600px) {
-footer {
-  display: none;
+#main {
+  padding-bottom: 150px; 
 }
 }
 
