--- a/style.css
+++ b/style.css
@@ -375,9 +375,9 @@ input[type="email"]:valid {
   section {
     width: 100%;
   }  
-  /* #main {
-    padding-bottom: 100px; 
-  }  */
+  #main {
+    padding: 100px 0; 
+  } 
   nav li {
     padding: 2px;
   } 
@@ -415,6 +415,9 @@ input[type="email"]:valid {
 @media all and (orientation: landscape) and (max-height: 600px) {
 #main {
   padding: 100px 0; 
+}
+footer {
+  display: none;
 }
 }
 
