--- a/style.css
+++ b/style.css
@@ -375,9 +375,9 @@ input[type="email"]:valid {
   section {
     width: 100%;
   }  
-  #main {
+  /* #main {
     padding: 100px 0; 
-  } 
+  }  */
   nav li {
     padding: 2px;
   } 
