--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
   h2,
   h3 {
     text-align: center;
-    padding: 25px 0;
+    padding: 2rem 0 1rem;
     margin: 0;
   } 
   p {
@@ -180,10 +180,7 @@ svg:hover {
   color: var(--theme);
   opacity: .5;
 }
-.studio h1,
-.service h1 {
-  padding: 1rem;
-}
+
 .service,
 .studio {
   display: flex;
