--- a/style.css
+++ b/style.css
@@ -69,12 +69,12 @@
   h2,
   h3 {
     text-align: center;
-    padding: 2rem 0 1rem;
+    padding: 2rem 0 .5rem;
     margin: 0;
   } 
   p {
     font-size: 1.5rem;
-    padding: .5rem;
+    padding: 0;
     margin: 0;
   }   
   h1 {
