--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
   #main {
     max-width: 1250px;
     min-height: 100vh;
-    padding: 25px 0;
+    padding: 50px 0;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -69,12 +69,12 @@
   h2,
   h3 {
     text-align: center;
-    padding: 2rem 0 .5rem;
+    padding: 1rem 0 .5rem;
     margin: 0;
   } 
   p {
     font-size: 1.5rem;
-    padding: 0;
+    padding: .5rem;
     margin: 0;
   }   
   h1 {
@@ -371,7 +371,10 @@ input[type="email"]:valid {
   article,
   section {
     width: 100%;
-  }  
+  } 
+  #main {
+    padding: 25px 0 75px;
+  }
   nav li {
     padding: 2px;
   } 
@@ -407,9 +410,9 @@ input[type="email"]:valid {
   }
 }
 @media all and (orientation: landscape) and (max-height: 600px) {
-#main {
-  padding: 100px 0; 
-}
+  #main {
+    padding: 25px 0;
+  }
 footer {
   display: none;
 }
