--- a/style.css
+++ b/style.css
@@ -195,13 +195,6 @@
   color: var(--light);
   max-width: 450px;
 }
-/* .fa-handshake {
-  padding: 2rem 0;
-} */
-/* .fa-person-booth,
-.fa-handshake {
-  margin: 2rem auto;
-} */
 .fa-camera,
 .fa-handshake,
 .fa-tape {
@@ -427,15 +420,22 @@ input[type="email"]:valid {
 }
   .gallery {
     max-width: 100%;
+    margin: 5px auto;
+    padding: 0 5px;
   }
 }
 @media all and (orientation: landscape) and (max-height: 600px) {
   #main {
     padding: 25px 0;
   }
-footer {
+  footer {
   display: none;
-}
+  }
+  .gallery {
+  max-width: 100%;
+  margin: 5px auto;
+  padding: 0 5px;
+  }
 }
 
 @media print {
